packages/gatsby-theme-carbon/src/components/PageTabs/PageTabs.module.scss
.tabs-container {
  margin: 0;
  width: 100%;
  box-shadow: 0 -1px 0 rgba($ui-02, 0.25);
}

.list {
  display: flex;
  flex-direction: row;
  width: 100%;
  list-style: none;
  padding: 0;
  overflow-x: auto;
  scrollbar-width: none;
}

.list-item {
  display: flex;
}

.link {
  @include carbon--type-style('body-short-02');
  padding: 13px $spacing-09 0 $spacing-05;
  text-decoration: none;
  line-height: 1;
  color: $inverse-01;
  white-space: nowrap;
  border-top: 3px solid transparent; // 3px accessibility minimum
  height: 3rem;
  transition: all $duration--moderate-01 $carbon--standard-easing;

  &:hover {
    background: #353535;
  }
}

.selected-item .link {
  border-top: 3px solid $brand-01; // 3px accessibility minimum
  background: $carbon--gray-80;
}

.list-item:not(.selected-item) .link {
  color: $active-01;

  &:hover {
    color: #fff;
  }
}

